// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NiOnboarding has the expected html structure 0 1`] = `
"<div id=\\"onboarding\\" class=\\"tm-session-wrapper\\">
   <img src=\\"~assets/images/cosmos-logo.png\\" class=\\"tm-session-backdrop\\">
   <div class=\\"tm-session\\">
      <div class=\\"tm-session-container\\">
         <div class=\\"tm-session-header\\">
            <div class=\\"tm-session-title\\">
               Welcome to Voyager
            </div>
</div>
<div class=\\"tm-session-main ps\\">
   <div class=\\"tm-session-label\\">
      This is a quick tour of the primary features of Cosmos Voyager.
   </div>
<img src=\\"function () {        return fn.apply(this, arguments);      }\\">
<div class=\\"tm-bar-discrete\\">
   <div class=\\"tm-bar-discrete__container\\">
      <div class=\\"tm-bar-discrete__edge\\"></div>
<div class=\\"tm-bar-discrete__node tm-bar-discrete__node--active\\"></div>
<div class=\\"tm-bar-discrete__node\\"></div>
<div class=\\"tm-bar-discrete__node\\"></div>
<div class=\\"tm-bar-discrete__node\\"></div>
<div class=\\"tm-bar-discrete__node\\"></div>
</div>
</div>
<div class=\\"ps__rail-x\\" style=\\"left: 0px; top: 0px;\\">
   <div class=\\"ps__thumb-x\\" tabindex=\\"0\\" style=\\"left: 0px; width: 0px;\\"></div>
</div>
<div class=\\"ps__rail-y\\" style=\\"top: 0px; left: 0px;\\">
   <div class=\\"ps__thumb-y\\" tabindex=\\"0\\" style=\\"top: 0px; height: 0px;\\"></div>
</div>
</div>
<div class=\\"tm-session-footer\\">
   <button class=\\"tm-btn\\"><span class=\\"tm-btn__container\\"><i aria-hidden=\\"true\\" class=\\"tm-btn__icon material-icons\\">close</i>
   <!---->
   <span class=\\"tm-btn__value\\">Skip</span></span></button><button class=\\"tm-btn\\"><span class=\\"tm-btn__container tm-btn__icon-right tm-btn--primary\\"><i aria-hidden=\\"true\\" class=\\"tm-btn__icon material-icons\\">chevron_right</i>
   <!---->
   <span class=\\"tm-btn__value\\">Next</span></span></button>
</div>
</div>
</div>
</div>"
`;

exports[`NiOnboarding has the expected html structure 1 1`] = `
"<div id=\\"onboarding\\" class=\\"tm-session-wrapper\\">
   <img src=\\"~assets/images/cosmos-logo.png\\" class=\\"tm-session-backdrop\\">
   <div class=\\"tm-session\\">
      <div class=\\"tm-session-container\\">
         <div class=\\"tm-session-header\\">
            <div class=\\"tm-session-title\\">
               Welcome to Voyager
            </div>
</div>
<div class=\\"tm-session-main ps\\">
   <div class=\\"tm-session-label\\">
      You can send and receive Cosmos tokens from anyone around the world.
   </div>
<img src=\\"function () {        return fn.apply(this, arguments);      }\\">
<div class=\\"tm-bar-discrete\\">
   <div class=\\"tm-bar-discrete__container\\">
      <div class=\\"tm-bar-discrete__edge\\"></div>
<div class=\\"tm-bar-discrete__node\\"></div>
<div class=\\"tm-bar-discrete__node\\"></div>
<div class=\\"tm-bar-discrete__node\\"></div>
<div class=\\"tm-bar-discrete__node\\"></div>
<div class=\\"tm-bar-discrete__node\\"></div>
</div>
</div>
<div class=\\"ps__rail-x\\" style=\\"left: 0px; top: 0px;\\">
   <div class=\\"ps__thumb-x\\" tabindex=\\"0\\" style=\\"left: 0px; width: 0px;\\"></div>
</div>
<div class=\\"ps__rail-y\\" style=\\"top: 0px; left: 0px;\\">
   <div class=\\"ps__thumb-y\\" tabindex=\\"0\\" style=\\"top: 0px; height: 0px;\\"></div>
</div>
</div>
<div class=\\"tm-session-footer\\">
   <button class=\\"tm-btn\\"><span class=\\"tm-btn__container\\"><i aria-hidden=\\"true\\" class=\\"tm-btn__icon material-icons\\">close</i>
   <!---->
   <span class=\\"tm-btn__value\\">Skip</span></span></button><button class=\\"tm-btn\\"><span class=\\"tm-btn__container tm-btn__icon-right tm-btn--primary\\"><i aria-hidden=\\"true\\" class=\\"tm-btn__icon material-icons\\">chevron_right</i>
   <!---->
   <span class=\\"tm-btn__value\\">Next</span></span></button>
</div>
</div>
</div>
</div>"
`;

exports[`NiOnboarding has the expected html structure 2 1`] = `
"<div id=\\"onboarding\\" class=\\"tm-session-wrapper\\">
   <img src=\\"~assets/images/cosmos-logo.png\\" class=\\"tm-session-backdrop\\">
   <div class=\\"tm-session\\">
      <div class=\\"tm-session-container\\">
         <div class=\\"tm-session-header\\">
            <div class=\\"tm-session-title\\">
               Welcome to Voyager
            </div>
</div>
<div class=\\"tm-session-main ps\\">
   <div class=\\"tm-session-label\\">
      You can stake your Atoms to Cosmos Validators to earn even more Atoms.
   </div>
<img src=\\"function () {        return fn.apply(this, arguments);      }\\">
<div class=\\"tm-bar-discrete\\">
   <div class=\\"tm-bar-discrete__container\\">
      <div class=\\"tm-bar-discrete__edge\\"></div>
<div class=\\"tm-bar-discrete__node\\"></div>
<div class=\\"tm-bar-discrete__node\\"></div>
<div class=\\"tm-bar-discrete__node\\"></div>
<div class=\\"tm-bar-discrete__node\\"></div>
<div class=\\"tm-bar-discrete__node\\"></div>
</div>
</div>
<div class=\\"ps__rail-x\\" style=\\"left: 0px; top: 0px;\\">
   <div class=\\"ps__thumb-x\\" tabindex=\\"0\\" style=\\"left: 0px; width: 0px;\\"></div>
</div>
<div class=\\"ps__rail-y\\" style=\\"top: 0px; left: 0px;\\">
   <div class=\\"ps__thumb-y\\" tabindex=\\"0\\" style=\\"top: 0px; height: 0px;\\"></div>
</div>
</div>
<div class=\\"tm-session-footer\\">
   <button class=\\"tm-btn\\"><span class=\\"tm-btn__container\\"><i aria-hidden=\\"true\\" class=\\"tm-btn__icon material-icons\\">close</i>
   <!---->
   <span class=\\"tm-btn__value\\">Skip</span></span></button><button class=\\"tm-btn\\"><span class=\\"tm-btn__container tm-btn__icon-right tm-btn--primary\\"><i aria-hidden=\\"true\\" class=\\"tm-btn__icon material-icons\\">chevron_right</i>
   <!---->
   <span class=\\"tm-btn__value\\">Next</span></span></button>
</div>
</div>
</div>
</div>"
`;

exports[`NiOnboarding has the expected html structure 3 1`] = `
"<div id=\\"onboarding\\" class=\\"tm-session-wrapper\\">
   <img src=\\"~assets/images/cosmos-logo.png\\" class=\\"tm-session-backdrop\\">
   <div class=\\"tm-session\\">
      <div class=\\"tm-session-container\\">
         <div class=\\"tm-session-header\\">
            <div class=\\"tm-session-title\\">
               Welcome to Voyager
            </div>
</div>
<div class=\\"tm-session-main ps\\">
   <div class=\\"tm-session-label\\">
      Through governance, you can vote on the future of the Cosmos Network.
   </div>
<img src=\\"function () {        return fn.apply(this, arguments);      }\\">
<div class=\\"tm-bar-discrete\\">
   <div class=\\"tm-bar-discrete__container\\">
      <div class=\\"tm-bar-discrete__edge\\"></div>
<div class=\\"tm-bar-discrete__node\\"></div>
<div class=\\"tm-bar-discrete__node\\"></div>
<div class=\\"tm-bar-discrete__node\\"></div>
<div class=\\"tm-bar-discrete__node\\"></div>
<div class=\\"tm-bar-discrete__node\\"></div>
</div>
</div>
<div class=\\"ps__rail-x\\" style=\\"left: 0px; top: 0px;\\">
   <div class=\\"ps__thumb-x\\" tabindex=\\"0\\" style=\\"left: 0px; width: 0px;\\"></div>
</div>
<div class=\\"ps__rail-y\\" style=\\"top: 0px; left: 0px;\\">
   <div class=\\"ps__thumb-y\\" tabindex=\\"0\\" style=\\"top: 0px; height: 0px;\\"></div>
</div>
</div>
<div class=\\"tm-session-footer\\">
   <button class=\\"tm-btn\\"><span class=\\"tm-btn__container\\"><i aria-hidden=\\"true\\" class=\\"tm-btn__icon material-icons\\">close</i>
   <!---->
   <span class=\\"tm-btn__value\\">Skip</span></span></button><button class=\\"tm-btn\\"><span class=\\"tm-btn__container tm-btn__icon-right tm-btn--primary\\"><i aria-hidden=\\"true\\" class=\\"tm-btn__icon material-icons\\">chevron_right</i>
   <!---->
   <span class=\\"tm-btn__value\\">Next</span></span></button>
</div>
</div>
</div>
</div>"
`;

exports[`NiOnboarding has the expected html structure 4 1`] = `
"<div id=\\"onboarding\\" class=\\"tm-session-wrapper\\">
   <img src=\\"~assets/images/cosmos-logo.png\\" class=\\"tm-session-backdrop\\">
   <div class=\\"tm-session\\">
      <div class=\\"tm-session-container\\">
         <div class=\\"tm-session-header\\">
            <div class=\\"tm-session-title\\">
               Welcome to Voyager
            </div>
</div>
<div class=\\"tm-session-main ps\\">
   <div class=\\"tm-session-label\\">
      Start using Voyager to explore the Cosmos Network!
   </div>
<img src=\\"function () {        return fn.apply(this, arguments);      }\\">
<div class=\\"tm-bar-discrete\\">
   <div class=\\"tm-bar-discrete__container\\">
      <div class=\\"tm-bar-discrete__edge\\"></div>
<div class=\\"tm-bar-discrete__node\\"></div>
<div class=\\"tm-bar-discrete__node\\"></div>
<div class=\\"tm-bar-discrete__node\\"></div>
<div class=\\"tm-bar-discrete__node\\"></div>
<div class=\\"tm-bar-discrete__node\\"></div>
</div>
</div>
<div class=\\"ps__rail-x\\" style=\\"left: 0px; top: 0px;\\">
   <div class=\\"ps__thumb-x\\" tabindex=\\"0\\" style=\\"left: 0px; width: 0px;\\"></div>
</div>
<div class=\\"ps__rail-y\\" style=\\"top: 0px; left: 0px;\\">
   <div class=\\"ps__thumb-y\\" tabindex=\\"0\\" style=\\"top: 0px; height: 0px;\\"></div>
</div>
</div>
<div class=\\"tm-session-footer\\">
   <button class=\\"tm-btn\\"><span class=\\"tm-btn__container\\"><i aria-hidden=\\"true\\" class=\\"tm-btn__icon material-icons\\">close</i>
   <!---->
   <span class=\\"tm-btn__value\\">Skip</span></span></button><button class=\\"tm-btn\\"><span class=\\"tm-btn__container tm-btn__icon-right tm-btn--primary\\"><i aria-hidden=\\"true\\" class=\\"tm-btn__icon material-icons\\">chevron_right</i>
   <!---->
   <span class=\\"tm-btn__value\\">Next</span></span></button>
</div>
</div>
</div>
</div>"
`;
